--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Arshid';
+  src: url('/assets/fonts/Arshid.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -70,4 +77,8 @@
   * {
     @apply border-border;
   }
+}
+
+.sar-symbol {
+  font-family: 'Arshid', sans-serif;
 }
